@@ -70,6 +70,12 @@ have been removed from the syntax.
 
 =item *
 
+LIST SUBSCRIPTIONS recognizes an optional argument:  a wildmat
+can now be specified to restrict the results of this command
+to specific newsgroups.
+
+=item *
+
 A new feature has been added to B<sm>.  When the B<-c> flag is used,
 it shows a clear, decoded form of the storage API token.  This
 was previously done by the contrib B<showtoken> script developed
